graph 수정